# syva

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CLAUDE.md  CODEX_MIGRATION.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  SKILLS.md
.github/workflows/: builder-image.yml  ci.yml  privileged-runtime.yml  release-images.yml
deploy/: syva-daemonset.yaml
deploy/k8s/: 00-crd.yaml  01-namespace-rbac.yaml  02-daemonset.yaml
deploy/lima/: bootstrap.sh  deploy.sh  undeploy.sh
deploy/v0.2/: daemonset-file.yaml  daemonset-k8s.yaml
deploy/v0.3/: daemonset-cp-mode.yaml
docker/: builder.Dockerfile
docs/adr/: 0002-control-plane.md  0003-transactional-write-discipline.md
docs/api/: api-compatibility.md  cli.md  grpc.md  syva-api.openapi.yaml  syvactl-command-contract.md
docs/archive/: 0002-control-plane.md  0003-transactional-write-discipline.md  (+1 more)
eval/: README.md
eval/harness/: Cargo.toml
eval/harness/cases/: case_001_register_zone_assigns_nonzero_id.yaml  case_002_register_zone_is_idempotent.yaml  case_003_list_zones_returns_registered_zones.yaml  case_004_status_includes_max_zones.yaml  case_005_allow_comm_then_list_surfaces_pair.yaml  case_006_deny_comm_retracts_pair.yaml  case_007_remove_zone_also_drops_its_comms.yaml  case_008_list_comms_unknown_zone_is_not_found.yaml  case_009_attach_container_rejects_empty_container_id.yaml  case_010_file_adapter_startup_toml_registers_zone.yaml  case_011_file_adapter_runtime_toml_add_registers_zone.yaml  case_012_file_adapter_toml_remove_removes_zone.yaml  case_013_file_adapter_toml_modify_updates_policy.yaml  case_014_file_adapter_privileged_zone_type_registers.yaml  case_015_file_adapter_ptrace_capability_registers.yaml  case_016_file_adapter_rejects_core_and_cp_flags_together.yaml  case_016_file_adapter_rejects_cp_endpoint_flag.yaml  case_017_file_adapter_rejects_missing_target_flag.yaml  case_018_file_adapter_malformed_toml_does_not_poison_valid_policy.yaml  case_019_file_adapter_retries_until_core_socket_appears.yaml  case_030_api_post_zone_registers_in_core.yaml  case_031_api_list_zones_matches_core_names.yaml  case_032_api_get_zone_matches_core_view.yaml  case_033_api_put_zone_updates_core_view.yaml  case_034_api_delete_zone_removes_from_core.yaml  case_035_api_malformed_json_returns_4xx_without_core_change.yaml  case_036_api_get_missing_zone_returns_404.yaml  case_037_api_rejects_core_and_cp_flags_together.yaml  case_037_api_rejects_cp_endpoint_flag.yaml  case_038_api_returns_5xx_while_core_is_down_then_recovers.yaml  case_039_api_missing_core_socket_waits_without_crashing.yaml  case_040_register_100_zones_succeeds_and_status_counts_them.yaml  case_041_register_past_max_zones_fails_cleanly.yaml  case_042_allow_comm_same_zone_is_invalid_argument.yaml  case_043_allow_comm_unknown_zone_is_not_found.yaml  case_044_status_zones_active_matches_list_zones_len.yaml  case_045_status_uptime_is_monotonic.yaml  case_046_rapid_register_remove_same_name_leaves_zone_absent.yaml  case_047_register_zone_empty_name_is_invalid_argument.yaml  case_048_register_zone_path_traversal_name_is_invalid_argument.yaml  (+1 more)
eval/harness/src/: main.rs
eval/oracle/: Cargo.toml
eval/oracle/src/: main.rs
lima/: syva.yaml
policies/: standard.toml
scripts/: verify-k8s-membership.sh
syva/: Cargo.toml
syva-adapter-api/: Cargo.toml  README.md
syva-adapter-api/src/: connect.rs  main.rs  routes.rs
syva-adapter-file/: Cargo.toml  README.md
syva-adapter-file/src/: diff.rs  lib.rs  main.rs  mapper.rs  policy.rs  reload.rs  run.rs  translate.rs  types.rs  verify.rs  watcher.rs
syva-adapter-k8s/: Cargo.toml  README.md
syva-adapter-k8s/src/: connect.rs  crd.rs  ip_zone.rs  main.rs  mapper.rs  membership.rs  metrics.rs  watcher.rs
syva-core/: Cargo.toml  README.md
syva-core-client/: Cargo.toml
syva-core-client/src/: lib.rs
syva-core/src/: btf.rs  container_id.rs  ebpf.rs  events.rs  health.rs  ingest.rs  main.rs  membership.rs  types.rs  zone.rs
syva-core/src/cp_reconcile/: mod.rs  state.rs
syva-core/src/rpc/: mod.rs
syva-core/tests/: integration_allow_contract.rs  integration_audit_mode.rs  integration_cgroup_escape.rs  integration_container_file_open.rs  integration_cross_zone_tcp.rs  integration_egress_cidr.rs  integration_events_stream.rs  integration_file_open_enforcement.rs  integration_inode_identity.rs  integration_network_lock.rs  integration_socket_egress.rs  local_mode_register_then_list.rs  local_mode_starts_server.rs
syva-core/tests/common/: mod.rs
syva-cp/: Cargo.toml  README.md
syva-cp-client/: Cargo.toml  README.md
syva-cp-client/src/: client.rs  error.rs  lib.rs
syva-cp-client/tests/: integration_end_to_end.rs
syva-cp/migrations/: 20260419120000_initial.sql  20260419120100_append_only_triggers.sql  20260420120000_zone_versions.sql  20260420140000_nodes_and_assignments.sql
syva-cp/src/: bus.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs
syva-cp/src/db/: mod.rs  types.rs
syva-cp/src/engine/: assignment.rs  mod.rs
syva-cp/src/read/: assignment.rs  mod.rs  node.rs  team.rs  zone.rs
syva-cp/src/rpc/: assignment_service.rs  mod.rs  node_service.rs  team_service.rs  zone_service.rs
syva-cp/src/write/: assignment.rs  mod.rs  node.rs  team.rs  zone.rs
syva-cp/tests/: create_team_writes_all_causal_rows.rs  create_zone_writes_all_causal_rows.rs  decommission_node_removes_assignments.rs  delete_zone_lifecycle.rs  heartbeat_exception_to_audit.rs  register_node_writes_all_causal_rows.rs  set_node_labels_recomputes_assignments.rs  update_zone_optimistic_lock.rs  zone_write_recomputes_assignments.rs
syva-ebpf/: Cargo.toml
syva-ebpf-common/: Cargo.toml
syva-ebpf/src/: cgroup_lock.rs  escape_guard.rs  exec_guard.rs  file_guard.rs  main.rs  mmap_guard.rs  ptrace_guard.rs  signal_guard.rs  socket_guard.rs  unix_guard.rs
syva-proto/: Cargo.toml  build.rs
syva/src/: btf.rs  ebpf.rs  events.rs  health.rs  main.rs  mapper.rs  policy.rs  reload.rs  types.rs  watcher.rs  zone.rs
syvactl/: Cargo.toml
syvactl/src/: main.rs
xtask/: Cargo.toml
(+23 files in other folders)
