[workspace]
resolver = "2"
members = [
    "syva-proto",
    "syva-core",
    "syva-ebpf-common",
    "syva",
    "xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# eBPF
aya = "0.13"

# Web
axum = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# containerd
containerd-client = { version = "0.8", features = ["connect"] }
