[package]
name = "syva-adapter-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "syva-api"
path = "src/main.rs"

[dependencies]
syva-proto = { path = "../syva-proto" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
