[package]
name = "syva-adapter-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "syva-api"
path = "src/main.rs"

[dependencies]
syva-core-client = { path = "../syva-core-client" }
syva-cp-client = { path = "../syva-cp-client" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
