[package]
name = "syva-adapter-file"
version.workspace = true
edition.workspace = true

[[bin]]
name = "syva-file"
path = "src/main.rs"

[dependencies]
syva-proto = { path = "../syva-proto" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
containerd-client = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
syva-ebpf-common = { path = "../syva-ebpf-common", features = ["userspace"] }
