[package]
name = "syva-adapter-file"
version.workspace = true
edition.workspace = true

[lib]
name = "syva_file"
path = "src/lib.rs"

[[bin]]
name = "syva-file"
path = "src/main.rs"

[dependencies]
syva-cp-client = { path = "../syva-cp-client" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
syva-ebpf-common = { path = "../syva-ebpf-common", features = ["userspace"] }
