[package]
name = "syva-adapter-k8s"
version.workspace = true
edition.workspace = true

[[bin]]
name = "syva-k8s"
path = "src/main.rs"

[dependencies]
syva-proto = { path = "../syva-proto" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
kube = { version = "0.95", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_29"] }
schemars = "0.8"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
