[package]
name = "syva-cp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "syva-cp"
path = "src/main.rs"

[dependencies]
syva-proto = { path = "../syva-proto" }

# Runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# HTTP (for health + /metrics)
axum = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
# sqlx::test macro runs each test in an isolated database.
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
] }
tokio = { workspace = true }
