[package]
name = "syva"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "syva"
path = "src/main.rs"

[dependencies]
syva-ebpf-common = { path = "../syva-ebpf-common", features = ["userspace"] }

aya.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
axum = "0.7"
containerd-client = { version = "0.8", features = ["connect"] }
libc = "0.2"
prost.workspace = true
prost-types = "0.13"
serde_json = "1"
